--- a/OptionModel/OptionModelWeb/Home.html
+++ b/OptionModel/OptionModelWeb/Home.html
@@ -61,26 +61,26 @@
                             </div>
                             <div>
                                 <p class="ms-font-m">Stock Price</p>
-                                <input class="ms-TextField-field" id="text1" type="text" style="width:70%" value="" placeholder="">
+                                <input class="ms-TextField-field" id="StockPrice" type="number" style="width:70%" value="" placeholder="">
                                 <br />
                                 <p class="ms-font-m">Strike Price</p>
-                                <input class="ms-TextField-field" id="text2" type="text" style="width:70%" value="" placeholder="">
+                                <input class="ms-TextField-field" id="StrikePrice" type="number" style="width:70%" value="" placeholder="">
 
                                 <br />
                                 <p class="ms-font-m">Years to maturity</p>
-                                <input class="ms-TextField-field" id="text3" type="text" style="width:70%" value="" placeholder="">
+                                <input class="ms-TextField-field" id="YearsTM" type="number" style="width:70%" value="" placeholder="">
 
                                 <br />
                                 <p class="ms-font-m">Risk free rate</p>
-                                <input class="ms-TextField-field" id="text4" type="text" style="width:70%" value="" placeholder="">
+                                <input class="ms-TextField-field" id="RiskFreeRate" type="number" style="width:70%" value="" placeholder="">
 
                                 <br />
                                 <p class="ms-font-m">Volatility</p>
-                                <input class="ms-TextField-field" id="text5" type="text" style="width:70%" value="" placeholder="">
+                                <input class="ms-TextField-field" id="Vol" type="number" style="width:70%" value="" placeholder="">
 
                                 <br /><br />
                                 <button id="run" class="ms-Button">
-                                    <span class="ms-Button-label">Run code</span>
+                                    <span class="ms-Button-label">Calculate</span>
                                 </button>
                                 <br /><br />
                                 <button id="createTable" class="ms-Button">
