--- a/OptionModel/OptionModelWeb/Home.html
+++ b/OptionModel/OptionModelWeb/Home.html
@@ -86,6 +86,10 @@
                                 <button id="createTable" class="ms-Button">
                                     <span class="ms-Button-label">Create Table</span>
                                 </button>
+                                <br /><br />
+                                <button id="createGraph" class="ms-Button">
+                                    <span class="ms-Button-label">Create Graph</span>
+                                </button>
                             </div>
 
 
